# ecodev-core

./: .coveragerc  .dockerignore  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile-dev  LICENSE.md  Makefile  README.md  SECURITY.md  docker-compose.override.yml  docker-compose.yml  pull_request_template.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: code-quality.yml
config/: local.yaml  preprod.yaml
ecodev_core/: __init__.py  app_activity.py  app_rights.py  app_user.py  auth_configuration.py  authentication.py  backup.py  check_dependencies.py  custom_equal.py  db_connection.py  db_filters.py  db_i18n.py  db_insertion.py  db_retrieval.py  db_upsertion.py  deployment.py  email_sender.py  encryption.py  enum_utils.py  es_connection.py  filter_db_filters.py  list_utils.py  logger.py  pandas_utils.py  permissions.py  pydantic_utils.py  read_write.py  rest_api_client.py  rest_api_configuration.py  rest_client.py  safe_utils.py  sequence_utils.py  settings.py  sqlmodel_utils.py  token_banlist.py  version.py
tests/functional/: test_authentication.py  test_db_connection.py  test_db_filters.py  test_db_i18n.py  test_db_insertion.py  test_db_retrieval.py  test_db_upsertion.py
tests/unitary/: test_custom_equal.py  test_db_i18n.py  test_dependencies.py  test_encryption.py  test_enum_converter.py  test_list_utils.py  test_pandas_utils.py  test_read_write.py  test_rest_api_client.py  test_safe_utils.py  test_sequence_utils.py  test_settings.py  test_sqlmodel_utils.py
tests/unitary/data/: dependencies_app.txt  gt_str_parsing.csv  new_user.csv  str_parsing.json  test_csv.csv  users.json  wrong_dependencies_app.txt
tests/unitary/data/code/ecodev_core/core/: core.py
tests/unitary/data/code/ecodev_core/db/: db.py
tests/unitary/data/code/ecodev_core/insertors/: insertors.py
tests/unitary/data/code/ecodev_core/nlp/: nlp.py
tests/unitary/data/code/ecodev_core/retrievers/: retrievers.py
tests/unitary/data/code/ecodev_core/routers/: routers.py
tests/unitary/data/config/: local.yaml  preprod.yaml
tests/unitary/data/secrets/: local.yaml
